--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.0.0
-  intl_phone_number_input: ^0.7.4
+  #intl_phone_number_input: ^0.7.4
   phone_numbers_parser: ^9.0.1
   provider: ^6.0.1
   quiver: ^3.0.1
