--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_login
 description: A login widget with login/signup functionalities to help speed up development
-version: 5.0.0
+version: 5.0.1
 repository: https://github.com/NearHuscarl/flutter_login
 
 environment:
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.0.0
   #intl_phone_number_input: ^0.7.4
-  phone_numbers_parser: ^9.0.1
+  #phone_numbers_parser: ^9.0.1
   provider: ^6.0.1
   quiver: ^3.0.1
   sign_in_button: ^3.0.0
